--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,11 @@ repos:
   rev: v5.10.1
   hooks:
   - id: isort
+
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.950
+  hooks:
+  - id: mypy
+    args: [--no-strict-optional, --ignore-missing-imports]
+    additional_dependencies:
+      - types-attrs
