--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pybravia"
-version = "0.1.7"
+version = "0.2.0"
 description = "Python async library for remote control of Sony Bravia TVs 2013 and newer."
 authors = ["Arem Draft <artemon_93@mail.ru>"]
 license = "MIT"
@@ -15,10 +15,12 @@ python = "^3.8"
 aiohttp = "*"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-pre-commit = "*"
-black = "*"
-isort = "*"
+pytest = "^7.1.2"
+pre-commit = "^2.20.0"
+mypy = "^0.971"
+black = "^22.6.0"
+isort = "^5.10.1"
+flake8 = "^5.0.4"
 
 [tool.isort]
 profile = "black"
