--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,8 @@
 	"name": "pybravia",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:0-3.10-bullseye",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-	},
-
+	"features": {},
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
@@ -16,22 +13,18 @@
 			"settings": {
 				"python.pythonPath": "/usr/local/bin/python",
 				"python.languageServer": "Pylance",
-				"python.linting.enabled": true,
-				"python.linting.pylintEnabled": true,
-				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-				"python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+				"editor.formatOnSave": true,
+				"ruff.enable": true,
+				"ruff.lint.run": "onSave",
+				"ruff.format.run": "onSave"
 			},
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
-				"ms-python.pylint"
+				"charliermarsh.ruff"
 			]
 		}
 	},
-
-
 	// Install all dependencies after container is created
-	"postCreateCommand": "pip install -r requirements-dev.txt && poetry install --no-interaction"
+	"postCreateCommand": "pip install uv && uv venv && . .venv/bin/activate && uv sync"
 }
