--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,33 @@
-name: Publish packages
+name: Upload Python Package
+
 on:
   release:
     types: [published]
 
 jobs:
-  build-n-publish:
-    name: Build release packages
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@master
-    - name: Setup python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
+      - name: Check out repository
+        uses: actions/checkout@v6
 
-    - name: Install pypa/build
-      run: >-
-        python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
-    - name: Publish release on pypi
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.PYPI_TOKEN }}
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          activate-environment: true
+          python-version: 3.13
+
+      - name: Set package version
+        run: |
+          version="${{ github.event.release.tag_name }}"
+          sed -i "s/^version = \".*\"/version = \"${version}\"/" pyproject.toml
+
+      - name: Build package
+        run: uv build
+
+      - name: Publish release to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.13.0
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
