--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,13 @@
 repos:
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.3.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.4.10
   hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-  - id: check-docstring-first
-  - id: check-yaml
-  - id: debug-statements
-  - id: check-ast
-
-- repo: https://github.com/ambv/black
-  rev: 22.10.0
-  hooks:
-  - id: black
-    language_version: python3
-
-- repo: https://github.com/PyCQA/flake8
-  rev: 5.0.4
-  hooks:
-  - id: flake8
-
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: v5.10.1
-  hooks:
-  - id: isort
+    - id: ruff
+      args: [--fix]
+    - id: ruff-format
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.991
+  rev: v1.19.1
   hooks:
   - id: mypy
     args: [--no-strict-optional, --ignore-missing-imports]
