--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,41 +14,27 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
-      - uses: "actions/checkout@v2"
-      - uses: "actions/setup-python@v2"
+      - name: Check out repository
+        uses: actions/checkout@v6
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
         with:
+          enable-cache: true
+          activate-environment: true
           python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
+
+      - name: "Ruff link"
         run: |
-          python -m pip install --upgrade pip poetry
-          poetry install
-      - name: "Code formating (black)"
+          uv run ruff check .
+
+      - name: "Ruff format check"
         run: |
-          poetry run pre-commit run black --all-files
-      - name: "Code formating (flake8)"
+          uv run ruff format --check .
+
+      - name: "Mypy type checking"
         run: |
-          poetry run pre-commit run flake8 --all-files
-      - name: "Order of imports (isort)"
-        run: |
-          poetry run pre-commit run isort --all-files
-      - name: "Typing checks (mypy)"
-        run: |
-          poetry run pre-commit run mypy --all-files
-      - name: "Run trailing-whitespace"
-        run: |
-          poetry run pre-commit run trailing-whitespace --all-files
-      - name: "Run end-of-file-fixer"
-        run: |
-          poetry run pre-commit run end-of-file-fixer --all-files
-      - name: "Run check-docstring-first"
-        run: |
-          poetry run pre-commit run check-docstring-first --all-files
-      - name: "Run debug-statements"
-        run: |
-          poetry run pre-commit run debug-statements --all-files
-      - name: "Run check-ast"
-        run: |
-          poetry run pre-commit run check-ast --all-files
+          uv run mypy . --no-strict-optional --ignore-missing-imports
