--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,5 @@ jobs:
 
       - name: "Run tests"
         run: |
+          pip install .[test]
           pytest tests --cov=pybravia --cov-report=term-missing
