--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,4 @@ jobs:
 
       - name: "Run tests"
         run: |
-          pip install .[test]
-          pytest tests --cov=pybravia --cov-report=term-missing
+          uv run pytest tests --cov=pybravia --cov-report=term-missing
