Add tests - stage 1 (#36)
* Initial commit

* More tests

* Run tests in CI

* Add pytest-cov

* More tests

* More tests

* Instal dev dependiences

* Update uv.lock

* uv sync

* Install all dependency groups for devcontainer

* Update tests/conftest.py

Co-authored-by: Artem Draft <Drafteed@users.noreply.github.com>

---------

Co-authored-by: Artem Draft <Drafteed@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,8 @@ jobs:
       - name: "Mypy type checking"
         run: |
           uv run mypy . --no-strict-optional --ignore-missing-imports
+
+      - name: "Run tests"
+        run: |
+          uv sync --group test
+          uv run pytest tests --cov=pybravia --cov-report=term-missing
