--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ dev = [
   "pre-commit==4.5.1",
   "mypy==1.19.1",
 ]
+test = [
+  "pytest==9.0.2",
+  "pytest-asyncio==1.3.0",
+  "pytest-cov==7.0.0",
+  "aioresponses==0.7.8",
+]
 
 [tool.ruff]
 line-length = 88
@@ -37,3 +43,7 @@ fixable = ["ALL"]
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
